--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# CCIPCA specific
+src/ccipca
 #################
 ## Eclipse
 #################
@@ -182,6 +184,8 @@ $RECYCLE.BIN/
 # Mac crap
 .DS_Store
 
+# sshfs
+.fuse*
 
 #############
 ## Python
@@ -213,4 +217,56 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+# C++
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+# Precompiled Headers
+*.gch
+*.pch
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+# Fortran module files
+*.mod
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+# Executables
+*.exe
+*.out
+*.app
 
+# C
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+# Precompiled Headers
+*.gch
+*.pch
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+#
