--- a/meshr/DESCRIPTION
+++ b/meshr/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: meshr
 Title: Tools for conducting enrichment analysis of MeSH
 Description: A set of annotation maps describing the entire MeSH assembled using data from MeSH
-Version: 1.2.5
+Version: 1.2.6
 Author: Itoshi Nikaido, Koki Tsuyuzaki, Gota Morota
 Maintainer: Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>
 Depends: R (>= 3.0.1), fdrtool, Category, BiocGenerics, methods,
         cummeRbund, org.Hs.eg.db, MeSH.db, MeSH.AOR.db, MeSH.PCR.db,
         MeSHDbi, org.MeSH.Hsa.db, org.MeSH.Aca.db, org.MeSH.Atu.K84.db,
-        org.MeSH.Bsu.168.db, org.MeSH.Syn.db
+        org.MeSH.Bsu.168.db, org.MeSH.Syn.db, S4Vectors
 Imports:
 Suggests:
 License: Artistic-2.0
