--- a/meshr/DESCRIPTION
+++ b/meshr/DESCRIPTION
@@ -1,16 +1,14 @@
 Package: meshr
 Title: Tools for conducting enrichment analysis of MeSH
 Description: A set of annotation maps describing the entire MeSH assembled using data from MeSH
-Version: 1.2.7
+Version: 1.4.1
 Author: Itoshi Nikaido, Koki Tsuyuzaki, Gota Morota
 Maintainer: Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>
 Depends: R (>= 3.0.1), fdrtool, Category, BiocGenerics, methods,
         cummeRbund, org.Hs.eg.db, MeSH.db, MeSH.AOR.db, MeSH.PCR.db,
-        MeSHDbi, org.MeSH.Hsa.db, org.MeSH.Aca.db, org.MeSH.Atu.K84.db,
-        org.MeSH.Bsu.168.db, org.MeSH.Syn.db, S4Vectors
-Imports:
-Suggests:
+        MeSHDbi, MeSH.Hsa.eg.db, MeSH.Aca.eg.db,
+        MeSH.Bsu.168.eg.db, MeSH.Syn.eg.db, S4Vectors
 License: Artistic-2.0
 biocViews: AnnotationData, FunctionalAnnotation, Bioinformatics,
-        Statistics, Annotation, MultipleComparisons
-Packaged: 2015-01-12 09:00:18 UTC; tsuyusakikouki
+        Statistics, Annotation, MultipleComparisons, MeSHDb
+Packaged: 2015-06-4 09:00:18 UTC; tsuyusakikouki
