--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,24 @@
 Package: meshr
 Title: Tools for conducting enrichment analysis of MeSH
 Description: A set of annotation maps describing the entire MeSH assembled using data from MeSH.
-Version: 1.99.0
+Version: 1.99.1
 Author: Koki Tsuyuzaki, Itoshi Nikaido, Gota Morota
 Maintainer: Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>
 Depends: R (>= 4.1.0)
-Imports: methods, stats, utils, fdrtool, MeSHDbi, Category, S4Vectors, BiocGenerics, RSQLite
+Imports: markdown,
+    rmarkdown,
+    BiocStyle,
+    knitr,
+    methods,
+    stats,
+    utils,
+    fdrtool,
+    MeSHDbi,
+    Category,
+    S4Vectors,
+    BiocGenerics,
+    RSQLite
 License: Artistic-2.0
 biocViews: AnnotationData, FunctionalAnnotation, Bioinformatics, Statistics, Annotation, MultipleComparisons, MeSHDb
+VignetteBuilder: knitr
+BugReports: https://github.com/rikenbit/meshr/issues
